# fortress

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  api-specifications.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  user-management-service-poc.md
.idx/: dev.nix
apps/: conftest.py
apps/authentication/: backends.py  exception_handler.py  exceptions.py  middleware.py  serializers.py  urls.py  views.py
apps/authentication/services/: __init__.py  auth_service.py  cognito_client.py
apps/authentication/tests/: conftest.py  test_api_integration.py  test_auth_service.py
apps/authentication/tests/properties/: test_login_properties.py  test_mfa_properties.py  test_password_reset_properties.py  test_registration_properties.py  test_token_properties.py
apps/authorization/: authentication.py  exception_handler.py  exceptions.py  serializers.py  urls.py  views.py
apps/authorization/services/: __init__.py  authz_service.py  avp_client.py  cache_service.py
apps/authorization/tests/: test_api_integration.py  test_authz_service.py
apps/users/: exception_handler.py  exceptions.py  serializers.py  urls.py  views.py
apps/users/services/: __init__.py  user_service.py
apps/users/tests/: test_api_integration.py  test_user_service.py
docs/: api-specifications.md  architecture-diagram.md  user-management-service-poc.md
fortress/: asgi.py  health.py  settings.py  urls.py  views.py  wsgi.py
nginx/: nginx.conf
nginx/conf.d/: fortress.conf
